# gepard_BlindCorr

./: .gitignore  MPDB_notebook.ipynb  MPDB_procedures.py  MPDB_settings.py  MPDB_utils.py  README.md  USER_GUIDE.md  hello.py  pyproject.toml
configs/: correction_template.yaml  default_config.yaml  test_corrections.yaml  test_debug.yaml  test_size_matching.yaml
examples/: example_processing.py  excel_workflow_example.py  microplastics_workflow.ipynb  organize_files.py  run_corrections.py  workflow_setup_guide.py
src/microplas_blind_corr/: __init__.py
src/microplas_blind_corr/config/: __init__.py  settings.py
src/microplas_blind_corr/data_loaders/: __init__.py  excel_loader.py
src/microplas_blind_corr/processors/: __init__.py  blank_corrector.py  blind_corrector.py  particle_processor.py
src/microplas_blind_corr/utils/: __init__.py  data_utils.py  file_organizer.py
src/microplas_blind_corr/workflows/: __init__.py  correction_workflow.py
test_data/: .~lock.250606_Sterni_500_5_Particle_List.xlsx#  250606_Sterni_500_5_Particle_List.xlsx
